# Mastering-Parallel-Programming-with-R

./: README.md  Software-Hardware-List.docx  ~$ftware-Hardware-List.docx
Chapter 1/: chapter1_solver.R
Chapter 1/segueSC/: DESCRIPTION  NAMESPACE  hgignore
Chapter 1/segueSC/R/R/: awsFunctions.R  csvTransform.R  emrlapply.R  segueSC-package.R  zzz.R
Chapter 1/segueSC/inst/inst/: bootstrapLatestR.sh  bootstrapR.sh  installLocalSourcepackage.r  mapper.R  update.R
Chapter 1/segueSC/man/man/: assembleOutput.Rd  checkLastStepStatus.Rd  checkStatus.Rd  createCluster.Rd  csvToList.Rd  deleteS3Bucket.Rd  deleteS3Key.Rd  downloadS3File.Rd  emptyS3Bucket.Rd  emrlapply.Rd  listToCsv.Rd  makeS3Bucket.Rd  segue-package.Rd  setCredentials.Rd  startCluster.Rd  (+3 more)
Chapter 2/: chapter2_pbdMPI.R  chapter2_workerdaemon.R
Chapter 3/: chapter3_medianfilter.R
Chapter 4/chapter4_sprint/MPIHelloWorld/: helloMPI.sh  mpihello.R  mpihello.c  mpihello_fromR.c
Chapter 4/chapter4_sprint/sprint/: installSprint.sh  sprint_test.R  testHello.R
Chapter 4/chapter4_sprint/sprint/sprint/: DESCRIPTION  MD5  NAMESPACE  NEWS  README  cleanup  config.status  configure  configure.ac  sprint_test.R
Chapter 4/chapter4_sprint/sprint/sprint/R/: phello.R
Chapter 4/chapter4_sprint/sprint/sprint/inst/: CITATION
Chapter 4/chapter4_sprint/sprint/sprint/inst/doc/: External_Release_Notes_1.0.7.docx  External_User_Guide_1.0.7.docx
Chapter 4/chapter4_sprint/sprint/sprint/inst/systemTest/pcor/: pcor.sh  pcor_sys_test.pbs
Chapter 4/chapter4_sprint/sprint/sprint/inst/systemTest/pstringDist/: large_test.sh  pstringDist_sys_test.pbs
Chapter 4/chapter4_sprint/sprint/sprint/inst/test_suite/: All-unit-test-log.html  README  batchRunTests.sh
Chapter 4/chapter4_sprint/sprint/sprint/man/: init.rng.Rd  pRP.Rd  pRPadvance.Rd  pRS.Rd  pRSadvance.Rd  papply.Rd  pboot.Rd  pcombine.Rd  pcor.Rd  phello.Rd  pmaxT.Rd  ppam.Rd  prandomForest.Rd  pstringdistmatrix.Rd  pterminate.Rd  ptest.Rd  reset.rng.Rd  sprint.Rd
Chapter 4/chapter4_sprint/sprint/sprint/src/: Makefile  Makevars  Makevars.in  functions.h  sprint.c  sprint.h
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/common/: functions.c  mmap.c  mmap.h  serialize.c  serialize.h  utils.c  utils.h
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pRP/implementation/: boot-rank-product.c  rank-product.c  rank-product.h  rp-generic.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pRP/interface/: boot-rp.c  rp.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/papply/implementation/: apply.c  apply.h  comms.c  comms.h  ffapply.c  ffapply.h  lapply.c  lapply.h  main.c  main.h
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/papply/interface/: papply.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pboot/implementation/: boot.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pboot/interface/: pboot.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pcor/implementation/: correlation.c  kernel.c  kernel.h
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pcor/interface/: pcor.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/phello/implementation/: hello.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/phello/interface/: phello.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pmaxT/implementation/: Rpack.c  block_sampling_fixed.c  bootloop.c  mt.c  mt.h  pairt_sampling.c  pairt_sampling_fixed.c  permutation.c  random.c  sampling.c  sampling_fixed.c  stat_func.c  stat_order.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pmaxT/interface/: pmaxT.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/ppam/implementation/: bswap.c  bswap.h  cstat.c  cstat.h  pamedoids.c  pamedoids.h  silhouette.c  silhouette.h
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/ppam/interface/: ppam.c  ppam.h
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/prandomForest/implementation/: random_forest_driver.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/prandomForest/interface/: random_forest.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pstringdistmatrix/implementation/: stringDist.c  stringDist_kernel.c  stringDist_kernel.h
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/pstringdistmatrix/interface/: pstringDist.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/psvm/implementation/: Rsvm.c  Rsvm.h  svm.cpp  svm.h  svm_call.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/psvm/interface/: psvm.c  psvm.h
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/ptest/implementation/: test.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/ptest/interface/: ptest.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/rng/implementation/: sprint-rng-worker.c
Chapter 4/chapter4_sprint/sprint/sprint/src/algorithms/rng/interface/: sprint-rng.c
Chapter 4/chapter4_sprint/sprint/sprint/tools/: reconfigure.sh
Chapter 4/chapter4_sprint/sprint/sprint/tools/m4/: README  acx_mpi.m4
Chapter 5/: chapter5_IMD_data.csv  chapter5_dist.R  chapter5_opencl.R  chapter5_vecadd.R
Chapter 5/ROpenCL/: DESCRIPTION  NAMESPACE
Chapter 5/ROpenCL/R/: createContext.R  zzz.R
Chapter 5/ROpenCL/inst/: NEWS
Chapter 5/ROpenCL/man/: ROpenCL-package.Rd  buildProgram.Rd  buildProgram.Rd~  createBuffer.Rd  createBufferFloatVector.Rd  createBufferIntegerVector.Rd  createCommandQueue.Rd  createContext.Rd  createContextFromType.Rd  createKernel.Rd  createProgram.Rd  createProgramWithSource.Rd  enqueueNDRangeKernel.Rd  enqueueReadBuffer.Rd  enqueueReadBufferFloatVector.Rd  enqueueReadBufferIntegerVector.Rd  enqueueWriteBuffer.Rd  enqueueWriteBufferFloatVector.Rd  enqueueWriteBufferIntegerVector.Rd  getContextInfo.Rd  getDeviceIDs.Rd  getPlatformIDs.Rd  getPlatformName.Rd  getPlatformName.Rd~  getProgramInfo.Rd  setKernelArgInt.Rd  setKernelArgMem.Rd
Chapter 5/ROpenCL/src/: Makevars  createContext.cpp  createContext.h  rcpp_module.cpp
Chapter 6/: chapter6_deadlock.R  chapter6_hybrid.R  chapter6_instability.R  chapter6_random.R
(+1 files in other folders)
